Started header for dashboard.

--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -1,1 +1,1 @@
-.wrapper53-test .testing{width:100%}.wrapper53-test .changes{display:none;color:red;position:absolute}body{margin:0;padding:0;width:100%;height:100%;color:#B0BEC5;display:table;font-weight:100;font-family:Lato}.container{text-align:center;display:table-cell;vertical-align:middle}.content{text-align:center;display:inline-block}.title{font-size:96px;margin-bottom:40px}.quote{font-size:24px}
+header{background-color:#252122;height:108px}.logo-main{margin-left:170px;margin-top:34px}.logo-client{float:right;margin-top:41px}
