--- a/laravel/resources/assets/sass/dashboard.scss
+++ b/laravel/resources/assets/sass/dashboard.scss
@@ -1,42 +1,17 @@
-.wrapper53-test {
-    .testing {
-        width: 100%;
-    }
-    .changes {
-        display: none;
-        color: #ff0000;
-        position: absolute;
-    }
+/* Colors */
+$darkgrey: rgba(37,33,34,1);
+
+header {
+    background-color: $darkgrey;
+    height: 108px;
 }
 
-
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    color: #B0BEC5;
-    display: table;
-    font-weight: 100;
-    font-family: 'Lato';
+.logo-main {
+    margin-left: 170px;
+    margin-top: 34px;
 }
 
-.container {
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.content {
-    text-align: center;
-    display: inline-block;
-}
-
-.title {
-    font-size: 96px;
-    margin-bottom: 40px;
-}
-
-.quote {
-    font-size: 24px;
+.logo-client {
+    float: right;
+    margin-top: 41px;
 }
