--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -1,1 +1,1 @@
-header{background-color:#252122;height:108px}.logo-main{margin-left:170px;margin-top:34px}.logo-client{float:right;margin-top:41px}
+header{background-color:#252122;height:108px}.logo-main{margin-left:170px;margin-top:34px}.logo-client{border-right:1px solid #eceae7;float:right;margin-top:41px}.menu{background-color:#252122;color:#878787;height:calc(100vh - 108px)}.menu ul{list-style:none;padding:0}
