--- a/laravel/resources/assets/sass/dashboard.scss
+++ b/laravel/resources/assets/sass/dashboard.scss
@@ -1,5 +1,7 @@
 /* Colors */
 $darkgrey: rgba(37,33,34,1);
+$mediumgrey: rgba(135,135,135,1);
+$lightgrey: rgba(236,234,231,1);
 
 header {
     background-color: $darkgrey;
@@ -12,6 +14,18 @@ header {
 }
 
 .logo-client {
+    border-right: 1px solid $lightgrey;
     float: right;
     margin-top: 41px;
 }
+
+.menu {
+    background-color: $darkgrey;
+    color: $mediumgrey;
+    height: calc(100vh - 108px);
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+}
+.test{}
