--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -4,6 +4,7 @@
 @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
 
 body, label, .checkbox label {
+    font-family: 'Raleway', sans-serif;
 	font-weight: 300;
 }
 
@@ -47,4 +48,8 @@ header {
             text-align: right;
         }
     }
+}
+
+h1 {
+    font-family: 'Raleway', sans-serif;
 }
