149: Switched client logo to text-only.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -48,11 +48,14 @@ header {
     .user-info {
         height: 108px;
         text-align: right;
-        .logo-client {
+        .client-name {
             border-right: 1px solid @lightgrey;
+            color: @lightgrey;
             display: inline-block;
+            font-size: 30px;
+            font-weight: 600;
             margin-right: 28px;
-            padding: 19px 28px;
+            padding: 9px 28px;
             position: relative;
             top: 50%;
             transform: translateY(-50%);
