--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -78,7 +78,7 @@ header {
         .utilities-wrapper {
             display: inline-block;
             position: relative;
-            top: 50%;
+            top: 46%;
             text-align: left;
             transform: translateY(-50%);
             .user-name {
@@ -87,6 +87,7 @@ header {
             .utilities {
                 display: inline-block;
                 list-style: none;
+                font-size: 12px;
                 margin: 0;
                 padding: 0;
                 li {
