--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -150,7 +150,7 @@ header {
 .main-content {
     padding: 20px;
 }
-.welcome-text {
+#welcome-text {
     font-size: 20px;
     font-weight: 600;
     .user-name {
