--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -14,13 +14,19 @@ body, label, .checkbox label {
 /* Colors */
 @bg_page: rgba(225,222,222,1);
 
-@darkgrey: rgba(37,33,34,1);
+@black: rgba(37,33,34,1);
+@darkgrey: rgba(66,66,66,1);
 @mediumgrey: rgba(135,135,135,1);
 @lightgrey: rgba(236,234,231,1);
+@white: rgba(255,255,255,1);
 
 @aqua: rgba(88,167,226,1);
 @gold: rgba(220,179,53,1);
-@white: rgba(255,255,255,1);
+@purple: rgba(67,56,92,1);
+@teal: rgba(35,145,146,1);
+@cobalt: rgba(52,62,112,1);
+
+@grid-gutter-width: 15px;
 
 body {
     background-color: @bg_page;
@@ -32,7 +38,7 @@ a:hover {
     color: @gold;
 }
 header {
-    background-color: @darkgrey;
+    background-color: @black;
     color: @white;
     height: 108px;
     .klerede-logo {
@@ -108,8 +114,8 @@ header {
 
 }
 .menu {
-    background-color: @darkgrey;
-    height: ~"calc(100vh - 108px)";   /* ~"..." added to prevent LESS from breaking calc() during compilation */
+    background-color: @black;
+    height: ~"calc(100% - 108px)";   /* ~"..." added to prevent LESS from breaking calc() during compilation */
     padding: 0;
     text-align: right;
     ul {
@@ -150,11 +156,52 @@ header {
 .main-content {
     padding: 20px;
 }
+.row {
+    padding-bottom: 20px;
+}
 #welcome-text {
     font-size: 20px;
     font-weight: 600;
     .user-name {
         color: @gold;
+    }
+    .time-date {
+        float: right;
+    }
+}
+.stat-block {
+    background-color: @aqua;
+    color: @white;
+    padding: 15px;
+    text-align: center;
+    text-transform: uppercase;
+    .label,
+    .change {
+        font-size: 20px;
+        font-weight: 400;
+        padding: 0;
+        white-space: normal;
+    }
+    .stat {
+        font-size: 38px;
+        font-weight: 500;
+    }
+}
+.stat-block.total-visitors {background-color: @cobalt;}
+.stat-block.gen-admission {background-color: @teal;}
+.stat-block.groups {background-color: @darkgrey;}
+.stat-block.members {background-color: @purple;}
+.stat-block.non-members {background-color: @gold;}
+.stat-block.total-gate {background-color: @aqua;}
+.widget {
+    background-color: @white;
+    padding: 15px;
+}
+.stat-block.stats-bottom {
+    background-color: @white;
+    color: @darkgrey;
+    .label {
+        color: @darkgrey;
     }
 }
 h1 {
@@ -162,4 +209,15 @@ h1 {
 }
 footer {
     text-align: right;
+}
+
+
+
+.row-eq-height {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    align-content: stretch;
+    align-items: stretch;
 }
