Sample API call and number formatting plugin.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -115,7 +115,7 @@ header {
 }
 .menu {
     background-color: @black;
-    height: ~"calc(100% - 108px)";   /* ~"..." added to prevent LESS from breaking calc() during compilation */
+    height: 100%;   /* ~"..." added to prevent LESS from breaking calc() during compilation  ....  ~"calc(100% - 108px)"*/
     padding: 0;
     text-align: right;
     ul {
