--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -164,21 +164,28 @@ header {
     padding: 0;
     text-align: right;
     @media (max-width: 767px) {
-        display: none;   /* TEMPORARY until the main layout is settled */
-        position: absolute;
-        z-index: 2000;
+        text-align: left;
     }
     ul {
         display: inline-block;
         list-style: none;
         margin-top: 51px;
         padding: 0;
+        @media (max-width: 767px) {
+            margin-bottom: 0;
+            margin-top: 0;
+        }
         li {
             font-size: 150%;
             font-weight: 600;
             padding: 22px 37px 22px 0;
-            text-align: left;
             position: relative;
+            text-align: left;
+            @media (max-width: 767px) {
+                float: left;
+                font-size: 100%;
+                padding: 0 0 15px 20px;
+            }
             a {
                 color: @mediumgrey;
                 cursor: pointer;
@@ -200,6 +207,12 @@ header {
             border-color: rgba(21, 45, 65, 0);
             border-right-color: @bg_page;
             border-width: 16px;
+            @media (max-width: 767px) {
+                bottom: 0;
+                border-right-color: transparent;
+                border-bottom-color: @bg_page;
+                right: 25%;
+            }
         }
     }
 }
