Added all top stats from API as test and fixed clock for noon times.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -300,12 +300,12 @@ header {
         }
     }
 }
-.stat-block.total-visitors {background-color: @cobalt;}
-.stat-block.gen-admission {background-color: @teal;}
-.stat-block.groups {background-color: @darkgrey;}
-.stat-block.members {background-color: @purple;}
-.stat-block.non-members {background-color: @gold;}
-.stat-block.total-gate {background-color: @aqua;}
+.stat-block#visitsTotal {background-color: @cobalt;}
+.stat-block#visitsGA {background-color: @teal;}
+.stat-block#visitsGroups {background-color: @darkgrey;}
+.stat-block#visitsMembers {background-color: @purple;}
+.stat-block#visitsNonmembers {background-color: @gold;}
+.stat-block#salesGate {background-color: @aqua;}
 .widget {
     background-color: @white;
     overflow: hidden;
