Fixed membership query, added JS for pulling yesterday's date, began filters for visits.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -252,6 +252,10 @@ header {
         }
     }
 }
+.filter {
+    background-color: @white;
+    padding: 10px;
+}
 .time-date-modifier {
     color: @mediumgrey;
 }
