New arrows and handling null data.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -289,14 +289,13 @@ header {
         transform: translateX(-50%);
         white-space: nowrap;
         .down {
-            margin: 0 -15px 0 -30px;
+            margin: 0 5px 0 0;
             opacity: 0.5;
-            transform: rotate(180deg) scale(0.3) translate(0%,-130%);
+            transform: rotate(180deg);
         }
         .up {
-            margin: 0 -15px 0 -30px;
+            margin: 0 5px 0 0;
             opacity: 0.5;
-            transform: scale(0.3) translate(0%,130%);
         }
     }
     .stat {
