Set bottom stats as ReactJS component.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -412,20 +412,14 @@ LG = Large devices Desktops (≥1200px)
     fill: #3660b0;
 }
 
-#outer {
-    background:#FFFFFF;
-    border-radius: 5px;
-    color: #000;
-}
-
-#div1, #div2, #div3, #div4 {
+#div1, #div2, #div3, #div4, #div5, #div6, #div7 {
     width: 130px;
     height: 160px;
     box-sizing: border-box;
     float: left;
 }
 
-#div2 .arc {
+#div1 .arc {
     stroke-weight: 0.1;
     fill: #f0a417;
 }
@@ -436,6 +430,26 @@ LG = Large devices Desktops (≥1200px)
 }
 
 #div3 .arc {
+    stroke-weight: 0.1;
+    fill: #1d871b;
+}
+
+#div4 .arc {
+    stroke-weight: 0.1;
+    fill: #1d871b;
+}
+
+#div5 .arc {
+    stroke-weight: 0.1;
+    fill: #1d871b;
+}
+
+#div6 .arc {
+    stroke-weight: 0.1;
+    fill: #1d871b;
+}
+
+#div7 .arc {
     stroke-weight: 0.1;
     fill: #1d871b;
 }
