--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -354,6 +354,20 @@ header {
         width: 180px;
     }
 }
+.arrow-connector:after {
+    border: solid transparent;
+    border-color: rgba(21, 45, 65, 0);
+    border-left-color: @white;
+    border-width: 16px;
+    bottom: 50%;
+    content: " ";
+    height: 0;
+    pointer-events: none;
+    position: absolute;
+    right: -24px;
+    transform: translateY(50%);
+    width: 0;    
+}
 #revenue,
 #earned-revenue {
     height: 675px;
