Arrow directions change with data changes.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -590,7 +590,7 @@ LG = Large devices Desktops (≥1200px)
 
 
 
-/* TEST BULLETS */
+/* TEST BULLETS ??? */
 .bullet { font: 10px sans-serif; }
 .bullet .marker { stroke: #000; stroke-width: 2px; }
 .bullet .tick line { stroke: #666; stroke-width: .5px; }
