--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -354,7 +354,7 @@ header {
         width: 180px;
     }
 }
-.arrow-connector:after {
+.arrow-connector-right:after {
     border: solid transparent;
     border-color: rgba(21, 45, 65, 0);
     border-left-color: @white;
@@ -365,6 +365,20 @@ header {
     pointer-events: none;
     position: absolute;
     right: -24px;
+    transform: translateY(50%);
+    width: 0;    
+}
+.arrow-connector-left:after {
+    border: solid transparent;
+    border-color: rgba(21, 45, 65, 0);
+    border-right-color: @white;
+    border-width: 16px;
+    bottom: 50%;
+    content: " ";
+    height: 0;
+    pointer-events: none;
+    position: absolute;
+    left: -24px;
     transform: translateY(50%);
     width: 0;    
 }
