Moved hard-coded pieces to components and displaying weather data.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -419,9 +419,17 @@ header {
         height: 100%;
         margin-right: 7px;
         width: 93px;
+        img {
+            position: relative;
+            top: -10px;
+            width: 100%;    
+        }
     }
     .temperature {
         font-size: 255%;
+    }
+    .weather-text {
+        text-transform: capitalize;
     }
 }
 .accordion {
