Added light and extra-bold font weights, and adjusted stats weight.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -3,7 +3,7 @@
 @btn-font-weight: 300;
 @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
 
-/* Main font weights are 400 (normal), 500 (medium), 600 (semi-bold), 700 (bold) */
+/* Main font weights are 300 (light), 400 (normal), 500 (medium), 600 (semi-bold), 700 (bold), 800 (extra-bold) */
 @font-main: 'Raleway', sans-serif;
 
 body, label, .checkbox label {
@@ -468,7 +468,7 @@ header {
         color: @darkgrey;
     }
     .stat {
-        font-weight: 700;
+        font-weight: 800;
     }
 }
 #members-conversion {
