Bottom row styling adjustments.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -464,10 +464,12 @@ header {
 .stat-block.stats-bottom {
     background-color: @white;
     color: @darkgrey;
+    height: 180px;
     .label {
         color: @darkgrey;
     }
     .stat {
+        font-size: 4vw;
         font-weight: 800;
     }
 }
