Adjusted letter spacing globally.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -39,6 +39,7 @@ body {
     background-color: @bg_page;
     /* Setting base font size to work with expected font unit conversion (pt --> %) for Raleway font family */
     font-size: 12px;
+    letter-spacing: .05em;
 }
 form {
     margin-bottom: 0;
